--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html ng-app="lifeWin">
+<html ng-app="app">
 <head>
 	<title>LifeWin</title>
-	<link rel="stylesheet" href="css/lifeWin.css">
+	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 	<header ui-view="header" class="container"></header>
 	<div ui-view class="container"></div>
 	<div ui-view="footer" class="container"></div>
 
-	<script src="js/lifeWin.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
